<resources>
    <string name="app_name">MySqliteDatabaseDeleteDemo</string>
    <string name="name">Name :</string>
    <string name="age">Age :</string>
    <string name="gender">Gender :</string>
    <string name="add_data">ADD Data</string>
    <string name="display_all_data">display all data</string>
    <string name="update_data">Update data</string>
    <string name="id">ID :</string>
    <string name="delete_data">Delete Data</string>
</resources>